--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.5",
-    "expo": "~51.0.9",
-    "expo-font": "~12.0.6",
+    "expo": "~51.0.20",
+    "expo-font": "~12.0.8",
     "expo-image-picker": "~15.0.6",
     "expo-linear-gradient": "^13.0.2",
+    "expo-location": "~17.0.1",
     "expo-splash-screen": "~0.27.4",
+    "expo-sqlite": "~14.0.4",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -26,12 +28,14 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.4.0",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-svg-transformer": "^1.5.0"
   },
   "private": true
 }
